# PortaNet

./: .gitignore  README.md
firmware/: .~lock.Architecture.odg#  Architecture.odg  architecture.xmi
firmware/PortaNet/: aliases  sdkconfig  sdkconfig.old
firmware/PortaNet/main/: CMakeLists.txt  main.c
firmware/PortaNet/main/controllers/: ApController.c  ApController.h  ConsoleController.c  ConsoleController.h  TerminalController.c  TerminalController.h
firmware/PortaNet/main/drivers/: console.c  console.h  flags.c  flags.h  flash.c  flash.h  swVersion.c  swVersion.h  uart.c  uart.h
firmware/PortaNet/main/interfaces/: ApInterface.c  ApInterface.h  ConsoleInterface.c  ConsoleInterface.h  TerminalInterface.c  TerminalInterface.h
firmware/PortaNet/notes/: ConsoleNotes.md
hardware/kicad/PortaNet/: #auto_saved_files#  .~lock.PortaNet.ods#  PortaNet.csv  PortaNet.kicad_pcb  PortaNet.kicad_prl  PortaNet.kicad_pro  PortaNet.kicad_sch  PortaNet.ods  PortaNet.xml  esp32.kicad_sch  fp-info-cache  misc1.kicad_sch
hardware/kicad/PortaNet/Gerber_v3/: PortaNet-B_Cu.gbr  PortaNet-B_Mask.gbr  PortaNet-B_Paste.gbr  PortaNet-B_Silkscreen.gbr  PortaNet-Edge_Cuts.gbr  PortaNet-F_Cu.gbr  PortaNet-F_Mask.gbr  PortaNet-F_Paste.gbr  PortaNet-F_Silkscreen.gbr  PortaNet-PTH.drl
hardware/kicad/PortaNet/gerbers/: PortaNet-B_Cu.gbr  PortaNet-B_Mask.gbr  PortaNet-B_Paste.gbr  PortaNet-B_Silkscreen.gbr  PortaNet-Edge_Cuts.gbr  PortaNet-F_Cu.gbr  PortaNet-F_Mask.gbr  PortaNet-F_Paste.gbr  PortaNet-F_Silkscreen.gbr  PortaNet-NPTH.drl  (+1 more)
notes/: scope.txt  software.txt  tobuy.txt
(+24 files in other folders)
